@@ -1,8 +1,11 @@
-# Minimum TLS protocol version. One of TLS1_VERSION, TLS1_1_VERSION,
-# TLS1_2_VERSION or 0 for lowest (TLS1_VERSION). SSLv3 and below disallowed.
-MIN_TLS_PROTOCOL=TLS1_VERSION
-# Maximum TLS protocol version. One of TLS1_VERSION, TLS1_1_VERSION,
-# TLS1_2_VERSION or 0 for highest. SSLv3 and below always disabled regardless.
+# As of August 2018, TLSv1.2 is the default TLS protocol version.
+# Minimum TLS protocol version. One of TLS1_2_VERSION, TLS1_VERSION_DEPRECATED, 
+# TLS1_1_VERSION_DEPRECATED, or 0 for the default. Invalid values will use 
+# the default. SSLv3 and below are disabled.
+MIN_TLS_PROTOCOL=0
+# Maximum TLS protocol version. One of TLS1_2_VERSION, TLS1_VERSION_DEPRECATED,
+# TLS1_1_VERSION_DEPRECATED, or 0 for the highest supported version. Invalid 
+# values will use the highest supported version. SSLv3 and below are disabled.
 MAX_TLS_PROTOCOL=0
 # GSSAPI Name compatibility mode when trying to determine
 # if a host certificate is legitimate. GSI predates RFC2818,
